--- a/tea/Gemfile
+++ b/tea/Gemfile
@@ -2,5 +2,8 @@ source "https://rubygems.org"
 
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
-# Specify your gem's dependencies in tea.gemspec
+#require 'pry'
+#require 'nokogiri'
+#require 'open_URI'
+
 gemspec
