added test message to Tea class

--- a/tea/Gemfile
+++ b/tea/Gemfile
@@ -2,8 +2,9 @@ source "https://rubygems.org"
 
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
-#require 'pry'
+#gem 'tea'
+require 'pry'
 #require 'nokogiri'
-#require 'open_URI'
+#gem 'open_URI'
 
 gemspec
